--- a/report.tex
+++ b/report.tex
@@ -20,7 +20,7 @@
 
 
 % 使用 CTeX 的 Report 模版
-\documentclass{ctexrep}
+\documentclass{ctexart}
 
 %% 导言区
 %% 所有需要添加的宏包，先创建新分支然后测试，最后等待负责的人，合并到主开发分支
@@ -54,7 +54,7 @@
 \title{Analyzation of Hadoop's File System \\ Hadoop 文件系统代码分析报告}
 %% 作者
 \author{李约瀚 \\ 14130140331 \\ qinka@live.com \\ me@qinka.pro %
-   \and 康赣鹏 \\ 14130140xxx \\ email@domain%
+   \and 康赣鹏 \\ 14130140377 \\ email@domain%
    \and 乔新闻 \\ 14130140xxx \\ email@domain%
    \and 罗赛男 \\ 14130140xxx \\ email@domain%
    \and  杨瑞  \\ 14130140xxx \\ email@domain%
