--- a/UML/outputstream/outputstream.tex
+++ b/UML/outputstream/outputstream.tex
@@ -331,7 +331,13 @@ public interface CanSetDropBehind {
 	throws IOException, UnsupportedOperationException;
 }
 \end{java}
-
+HDFS写文件过程
+\begin{figure}[h]
+\centering
+\includegraphics[width =1\linewidth]{write.png}
+\caption{HDFS写文件时序图}
+\label{fig:HDFS写文件时序图}
+\end{figure}
 
 Path
 
