--- a/report.tex
+++ b/report.tex
@@ -4,10 +4,10 @@
 %%       Report of the analyzing for Hadoop
 %%
 %%       Copyright (C) XDUSakura 2017
-%% 
+%%
 %%       <pari passu>
 %%       李约瀚 (John Lee) (Qinka) <qinka@live.com> <me@qinka.pro>
-%%       康赣鹏
+%%       康赣鹏 <1159838847@qq.com> <ganpangkang@gmail.com>
 %%       乔新闻
 %%       罗赛男
 %%       杨瑞
@@ -38,7 +38,7 @@
 \usepackage{listings}
 %% 配置 样式
 \lstset{ breaklines %% 控制换行
-       , numbers=left %% 在左边显示行号 
+       , numbers=left %% 在左边显示行号
        }
 %% 定义 Java 代码环境
 \lstnewenvironment{java}[1][]
@@ -54,7 +54,7 @@
 \title{Analyzation of Hadoop's File System \\ Hadoop 文件系统代码分析报告}
 %% 作者
 \author{李约瀚 \\ 14130140331 \\ qinka@live.com \\ me@qinka.pro %
-   \and 康赣鹏 \\ 14130140xxx \\ email@domain%
+   \and 康赣鹏 \\ 14130140377 \\ 1159838847@qq.com\\ganpangkang@gmail.com
    \and 乔新闻 \\ 14130140xxx \\ email@domain%
    \and 罗赛男 \\ 14130140xxx \\ email@domain%
    \and  杨瑞  \\ 14130140xxx \\ email@domain%
@@ -65,7 +65,7 @@
 \begin{document}
     \maketitle
     \tableofcontents
-    
+
     %%　摘要
     \input{summary}
     %% 环境
@@ -78,6 +78,5 @@
     \input{verification}
     %% 修复
     \input{fix}
-    
-\end{document}
 
+\end{document}
