update personal info by xinwenQiao

--- a/report.tex
+++ b/report.tex
@@ -8,7 +8,7 @@
 %%       <pari passu>
 %%       李约瀚 (John Lee) (Qinka) <qinka@live.com> <me@qinka.pro>
 %%       康赣鹏
-%%       乔新文
+%%       乔新文 (Xinwen Qiao) (starsriver) <starsriver@outlook.com>
 %%       罗赛男
 %%       杨瑞
 %%
