increase luosainan's information

--- a/report.tex
+++ b/report.tex
@@ -4,7 +4,7 @@
 %%       Report of the analyzing for Hadoop
 %%
 %%       Copyright (C) XDUSakura 2017
-%% 
+%%
 %%       <pari passu>
 %%       李约瀚 (John Lee) (Qinka) <qinka@live.com> <me@qinka.pro>
 %%       康赣鹏
@@ -38,7 +38,7 @@
 \usepackage{listings}
 %% 配置 样式
 \lstset{ breaklines %% 控制换行
-       , numbers=left %% 在左边显示行号 
+       , numbers=left %% 在左边显示行号
        }
 %% 定义 Java 代码环境
 \lstnewenvironment{java}[1][]
@@ -56,7 +56,7 @@
 \author{李约瀚 \\ 14130140331 \\ qinka@live.com \\ me@qinka.pro %
    \and 康赣鹏 \\ 14130140xxx \\ email@domain%
    \and 乔新文 \\ 141301400393 \\ starsriver@outlook.com %
-   \and 罗赛男 \\ 14130140xxx \\ email@domain%
+   \and 罗赛男 \\ 14130140363 \\ luosainan96@163.com%
    \and  杨瑞  \\ 14130140xxx \\ email@domain%
    % 格式 姓名 【换行】 学号 【换行】 邮箱 【换行】 邮箱 （可以只有一个。。。
    }
@@ -67,7 +67,7 @@
     \newpage
     \tableofcontents
     \newpage
-    
+
     %%　摘要
     \input{summary}
     %% 环境
@@ -78,6 +78,6 @@
     \input{UML}
     %% 修复
     \input{fix}
-    
+
 \end{document}
 
